# feature-store

./: .env  .gitignore  Makefile  docker-compose.yml  env  main.py  pyproject.toml  requirements.txt
batch_processing/: main.py  psycopg2_database_helper.py  pyspark_processing.py  test.csv  test.ipynb
infa/: start.sh
infa/airflow/: airflow-docker-compose.yml
infa/containers/spark/: .env  Dockerfile  requirements.txt
